<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.formulario.FormularioActivity">

    <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputNome">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPersonName|textCapWords"

                      android:hint="@string/hintName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputEmail">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"

                      android:hint="@string/hintEmail"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputTelefone">

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="phone"

                      android:hint="@string/hintPhone"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btSave"
                    android:id="@+id/btSalvar"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/btDelete"
                    android:id="@+id/btExcluir"/>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/loading_save"/>
</FrameLayout>